2006-03-21  Bastien Nocera  <hadess@hadess.net>

	* data/handlers.sh: use "needs_terminal" GConf key, and not
	"need-terminal" as previously, spotted by John Thacker
	<thacker@math.cornell.edu> (Closes: #335138)

2006-03-18  Vladimer Sichinava  <vlsichinava@gmail.com>

        * configure.in: Added "ka" (Georgian) to ALL_LINGUAS

2006-03-17  Bastien Nocera  <hadess@hadess.net>

	* src/plparse/totem-pl-parser.c: (parse_asx_entry): don't forcibly
	change mms:// urls to mmsh://, the server might not handle it
	(Closes: #333375)

2006-03-16  Bastien Nocera  <hadess@hadess.net>

	* src/Makefile.am:
	* src/backend/Makefile.am: reorder the link libraries to be able to
	build on some systems, patch by Mikhail Zabaluev <mhz@altlinux.org>
	(Closes: #334731)

2006-03-15  Bastien Nocera  <hadess@hadess.net>

	* src/plparse/totem-pl-parser.c:
	(totem_pl_parser_add_quicktime_metalink),
	(totem_pl_parser_add_quicktime): Add basic support for the Quicktime
	Metalink playlists (Closes: #333539)

2006-03-13  Bastien Nocera  <hadess@hadess.net>

	* src/totem-skipto.c: (totem_skipto_new): update the "Skip to" time
	label when entering the time manually, spotted by Eskil Bylund
	<eskil@letterboxes.org> (Closes: #331912)

============ Version 1.4.0

2006-03-13  Bastien Nocera  <hadess@hadess.net>

	* NEWS: upd
	* configure.in: 1.4.0

2006-03-11  Bastien Nocera  <hadess@hadess.net>

	* src/totem-properties-main.c: (totem_properties_get_pages),
	(nautilus_module_initialize): only initialise the backend when we
	create the first page, making nautilus startup slightly faster with
	the GStreamer backend (Closes: #334041)

2006-03-10  James Livingston  <jrl@ids.org.au>

	* src/plparse/totem-pl-parser.c:
	(totem_pl_parser_add_pls_with_contents): don't reset the "fallback"
	option when not recursing.
	(totem_pl_parser_parse_internal): don't look up the mime-type of
	"inner" entries if we are not recursively processing playlists. From
	bug 331508.

2006-03-05  Bastien Nocera  <hadess@hadess.net>