@@ -586,12 +586,10 @@ bacon_volume_scale_value_changed (GtkRange * range)
   GdkPixbuf *buf;
 
   if (val == adj->lower)
-    s = "stock_volume-mute";
-  else if (val > adj->lower && val <= adj->lower + step)
     s = "stock_volume-0";
-  else if (val > adj->lower + step && val <= adj->lower + step * 2)
+  else if (val > adj->lower && val <= adj->lower + step)
     s = "stock_volume-min";
-  else if (val > adj->lower + step * 2 && val <= adj->lower + step * 3)
+  else if (val > adj->lower + step && val <= adj->lower + step * 2)
     s = "stock_volume-med";
   else
     s = "stock_volume-max";
