@@ -1,3 +1,8 @@
+2006-03-21  Dennis Cranston  <dennis_cranston@yahoo.com>
+
+	* src/bacon-volume.c: (bacon_volume_scale_value_changed): Volume
+	should not display stock_volume-0 for volume > 0.
+
 2006-03-21  Bastien Nocera  <hadess@hadess.net>
 
 	* data/handlers.sh: use "needs_terminal" GConf key, and not
